--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/yzhao3685"
+  github           : "yzhao3685"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yunfan-zhao-030878a8"
+  linkedin         : "yunfan-zhao-030878a8"
   orcid            :
   pinterest        :
   soundcloud       :
