update landing page

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Yunfan Zhao"
   avatar           : "profile.png"
-  bio              : "Ph.D. student at Columbia IEOR"
-  location         : "New York, NY"
+  bio              : "postdoc at Harvard CRCS"
+  location         : "Boston, MA"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=wy_rqnwAAAAJ&hl=en&oi=ao"
