--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yunfan Zhao"
   avatar           : "profile.png"
-  bio              : "postdoc at Harvard CRCS"
+  bio              : "postdoc at Harvard"
   location         : "Boston, MA"
   employer         :
   pubmed           : 
